--- a/Pathy/View/Storyboards/Base.lproj/Main.storyboard
+++ b/Pathy/View/Storyboards/Base.lproj/Main.storyboard
@@ -138,16 +138,16 @@
             </objects>
             <point key="canvasLocation" x="-1194" y="584"/>
         </scene>
-        <!--Map1 View Controller-->
+        <!--View Controller-->
         <scene sceneID="ss0-Rq-CR2">
             <objects>
-                <viewController id="Zgl-IL-uz1" customClass="Map1ViewController" customModule="Pathy" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Zgl-IL-uz1" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ViP-ne-q8Z">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="By5-wX-c9t">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                             </mapView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="AkR-8B-xdO"/>
@@ -176,12 +176,12 @@
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
             </objects>
-            <point key="canvasLocation" x="-4493" y="356"/>
+            <point key="canvasLocation" x="-1571" y="-485"/>
         </scene>
-        <!--View Controller-->
+        <!--Map1 View Controller-->
         <scene sceneID="PJo-8Y-PD7">
             <objects>
-                <viewController id="dBd-on-zYo" sceneMemberID="viewController">
+                <viewController id="dBd-on-zYo" customClass="Map1ViewController" customModule="Pathy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ezg-72-PjZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -210,7 +210,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0SQ-B1-2eB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2847.826086956522" y="-641.51785714285711"/>
+            <point key="canvasLocation" x="-2667" y="-485"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="QCt-HC-Te3">
@@ -292,24 +292,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rGX-Xe-GcW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1975" y="1290"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Ldr-bF-9wK">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Umn-Gw-qeE" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="klH-kJ-eSe">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Zgl-IL-uz1" kind="relationship" relationship="rootViewController" id="EJe-vU-Nnv"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lKT-Ct-pXM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1528" y="-485"/>
         </scene>
     </scenes>
     <resources>
