--- a/Pathy/View/Storyboards/Base.lproj/Main.storyboard
+++ b/Pathy/View/Storyboards/Base.lproj/Main.storyboard
@@ -52,7 +52,6 @@
         <!--Tab Bar Controller-->
         <scene sceneID="eDA-LN-8YO">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="K9p-Oh-Qem" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <tabBarController id="zoO-gP-IJi" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="chw-6t-EOy">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
@@ -68,6 +67,7 @@
                         <segue destination="vLm-h5-jpg" kind="relationship" relationship="viewControllers" id="66D-uF-AWP"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K9p-Oh-Qem" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="626.08695652173913" y="-160.04464285714286"/>
         </scene>
@@ -125,9 +125,8 @@
         <!--Navigation Controller-->
         <scene sceneID="OUV-Hj-THC">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zlR-5D-9dv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController id="No1-3l-Xnf" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" enabled="NO" title="" image="tabBarItem:LCc-Lx-5cA:image" catalog="system" id="LCc-Lx-5cA">
+                    <tabBarItem key="tabBarItem" enabled="NO" title="" image="tabBarItem:LCc-Lx-5cA:image" id="LCc-Lx-5cA">
                         <color key="badgeColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBarItem>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="cKf-Mn-1cr">
@@ -135,18 +134,19 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zlR-5D-9dv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1194" y="584"/>
         </scene>
-        <!--View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="ss0-Rq-CR2">
             <objects>
-                <viewController id="Zgl-IL-uz1" sceneMemberID="viewController">
+                <viewController id="Zgl-IL-uz1" customClass="MapViewController" customModule="Pathy" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ViP-ne-q8Z">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="By5-wX-c9t">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="By5-wX-c9t">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                             </mapView>
                         </subviews>
@@ -166,6 +166,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="maView" destination="By5-wX-c9t" id="imy-f6-ppt"/>
+                        <outlet property="mapView" destination="By5-wX-c9t" id="fmD-BF-64a"/>
                         <outlet property="searchBar" destination="R0F-PL-5ze" id="nih-Mr-3St"/>
                     </connections>
                 </viewController>
@@ -299,7 +300,7 @@
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="network" catalog="system" width="128" height="121"/>
         <image name="person" catalog="system" width="128" height="117"/>
-        <image name="tabBarItem:LCc-Lx-5cA:image" catalog="system" width="128" height="112">
+        <image name="tabBarItem:LCc-Lx-5cA:image" width="128" height="112">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGBwpYJHZlcnNpb25ZJGFyY2hpdmVyVCR0b3BYJG9iamVjdHMSAAGGoF8QD05T
 S2V5ZWRBcmNoaXZlctEICVRyb290gAGvEBELDBscIRkmKisyNThCSktPUlUkbnVsbNcNDg8QERITFBUW
