--- a/Pathy/View/Storyboards/Base.lproj/Main.storyboard
+++ b/Pathy/View/Storyboards/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
         <scene sceneID="L68-90-JoI">
             <objects>
                 <navigationController id="vLm-h5-jpg" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="person" catalog="system" id="lem-V3-u8T"/>
+                    <tabBarItem key="tabBarItem" title="" image="person" catalog="system" id="lem-V3-u8T" customClass="Po"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="m4l-EA-rRm">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
